# cli_builder

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README.md.original  mypy.ini  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-tests.yml
docs/: mkdocs.yml
docs/en/: changelog.md  contributing.md  index.md  readme.md  roadmap.md  todo.md
docs/en/api/: core.md  decorators.md  events.md
docs/en/guides/: quickstart.md
docs/ru/: changelog.md  contributing.md  index.md  readme.md  roadmap.md  todo.md
docs/ru/guides/: basics.md
examples/: __init__.py  advanced_cli.py  auto_decorators_example.py  basic_cli.py  help_example.py  help_example_no_description.py  parent_module_example.py  standard_commands_example.py
src/cli_builder/: __init__.py  cli.py  command.py  constants.py
src/cli_builder/cli/: __init__.py  base.py  core.py  library.py  module.py
src/cli_builder/decorators/: __init__.py  cli.py  library.py  module.py  utils.py
src/cli_builder/events/: __init__.py  emitter.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli_integration.py
tests/unit/: __init__.py  test_auto_decorators.py  test_cli.py  test_command.py  test_constants.py  test_examples.py  test_help_generation.py  test_integration.py  test_security.py  test_standard_commands.py
tests/unit/cli_base/: __init__.py  test_cli_core.py  test_cli_library.py  test_cli_module.py  test_event_bubbling.py
tests/unit/decorators/: __init__.py  test_cli_decorator.py  test_library_decorator.py  test_module_decorator.py
tests/unit/events/: test_event_emitter.py
